[gd_scene load_steps=3 format=2]

[ext_resource path="res://towers/tower_behaviour.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=3]
radius = 325.0

[node name="Tower" type="TextureButton"]
margin_right = 0.511997
margin_bottom = -0.200005
grow_horizontal = 0
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 3 )
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_AttackRange_area_exited"]
